<resources>
    <string name="app_name">TipCalculator_gcedarblade</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="percent">Percent</string>
    <string name="_15">15%</string>
    <string name="minusSign">-</string>
    <string name="positiveSign">+</string>
    <string name="tip">Tip</string>
    <string name="zeroDollars">$0.00</string>
    <string name="total">Total</string>
    <string name="zeroDollarsTotal">$0.00</string>
    <string name="rounding">Rounding</string>
    <string name="noneRadioButtonText">None</string>
    <string name="tipRadioButtonText">Tip</string>
    <string name="totalRadioButtonText">Total</string>
    <string-array name="split_array">
        <item>No</item>
        <item>2 ways</item>
        <item>3 ways</item>
        <item>4 ways</item>
    </string-array>
    <string name="split_bill">Split Bill?</string>
    <string name="per_person">Per Person</string>
    <string name="zeroDollarsPerPerson">$0.00</string>
    <string name="applyPerPerson">Apply</string>
</resources>
