<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="edu.cvtc.android.tipcalculator_gcedarblade.TipCalculator">

    <!-- Bill Amount -->
    <TableRow>
        <TextView
            android:id="@+id/billAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_amount"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/billAmountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_span="3" >

            <requestFocus/>

        </EditText>

    </TableRow>
    <!-- END BIll Amount -->
    <!-- Tip Percent -->
    <TableRow>

        <TextView
            android:id="@+id/percentLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding= "10dp"/>

        <TextView
            android:id="@+id/tipPercentAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="10dp"/>

        <Button
            android:id="@+id/tipPercentDownButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/minusSign"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tipPercentUpButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/positiveSign"
            android:textSize="20sp"/>

    </TableRow>
    <!-- END Tip Percent -->

    <!-- Tip Amount -->
    <TableRow>

        <TextView
            android:id="@+id/tipLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tipAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeroDollars"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_gravity="l"
            android:layout_span="3"/>

    </TableRow>
    <!-- END Tip Amount -->

    <!-- Total -->
    <TableRow>

        <TextView
            android:id="@+id/totalLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/totalAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeroDollarsTotal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_span="3"/>

    </TableRow>
    <!-- END Total -->

    <!-- Separator Line -->
    <View
        android:id="@+id/separatorLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="5dp"
        android:background="@android:color/black" />
    <!-- END Separator Line -->

    <!-- Rounding -->

    <TextView
        android:id="@+id/roundingLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rounding"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:gravity="center"
        />

    <RadioGroup
        android:id="@+id/roundingRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/noneRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noneRadioButtonText"
            />

        <RadioButton
            android:id="@+id/tipRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipRadioButtonText"
            />

        <RadioButton
            android:id="@+id/totalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalRadioButtonText"
            />

    </RadioGroup>
    <!-- END Rounding -->
    <!-- Split Bill -->
    <TextView
        android:id="@+id/splitLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/split_bill"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <Spinner
        android:id="@+id/splitBillSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/perPersonLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/per_person"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/perPersonAmountLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/zeroDollarsPerPerson"
        android:textSize="20sp"
        />
    <!-- END Split Bill -->

    <!-- Apply Button -->

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applyPerPerson"
        />


</TableLayout>
